Bug 923156 - [OSX] Moving the bookmarks toolbar items into the navbar causes weird vertical alignment issues with the navbar and some buttons. r=Gijs
UltraBlame original commit: 3b77d1ed52af2338fd0258b397d13cb2f7456747

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -1378,6 +1378,43 @@ bottom
 *
 /
 }
+#
+nav
+-
+bar
+-
+customization
+-
+target
+>
+#
+wrapper
+-
+personal
+-
+bookmarks
+>
+#
+personal
+-
+bookmarks
+{
+min
+-
+height
+:
+32px
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
 toolbarbutton
 .
 chevron
